# dst-nynews

./: .flake8  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: actions.yml  code-review.yml  my_first_workflow.yml  python-code-review.yml  scheduled-data-fetch.yml
api/: test_api.py
arkiv/backend/: database.py  main.py
arkiv/db/: bdd_write.py  requirementspourpostgres.txt
arkiv/docker/: docker-compose.yml
arkiv/notebooks/: Covid_dataframe_mask_use.ipynb
arkiv/sourcing/: schedule_fetch_data.py
backend/: database.py  main.py
backend/articleSearch/: routes.py
dashboard/: test_dash.py
data/: requete.py  utilisation_json.py
db/: SQL_Scripts  bdd_covid.py  bdd_write.py  counties_clean.csv  dump-covid-202304201342.sql  mask_use_clean.csv  states_clean.csv
docker/: docker-compose.yml
docs/: conf.py  index.rst
frontend/: FrontApiCovid.py  Total Cases and Deaths.py  TotalCasesandDeaths.py  main.py  test_dash.py  utils.py
notebooks/: Covid_dataframe_counties.ipynb  Covid_dataframe_counts.ipynb  Covid_dataframe_states.ipynb  api_archive.ipynb  api_archive.py  api_most_popular.ipynb  api_requests.ipynb
sourcing/: Abbas, Mahmoud.json  Acapulco (Mexico).json  Baseball.json  Chicago White Sox.json  Coronavirus (2019-nCoV).json  Coronavirus.json  api_archive.py  api_most_popular.py  bdd_semantic.py  conceptRaw.json  data_cleaning.py  main.py  request_article_search.py  requete_articlesearch.py  requete_mostpopular.py  requete_semantic.py  schedule_fetch_data.py  script_bdd.py
(+236 files in other folders)
