[tool.poetry]
name = "DST-NewsFeed"
version = "0.1.0"
description = "Showcase of a batch ETL pipeline on the API Times Wire of the NY Times."
authors = ["Mickael GASPAR <migatsar@gmail.com>"]
readme = "README.md"
packages = [{include = "dst_newsfeed"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
bandit = "^1"
black = "^22"
coverage = "^7"
flake8 = "^6"
isort = "^5"
jupyterlab = "^3"
mypy = "^0.991"
pytest = "^7"
pytest-cov = "^4"
safety = "^2"


[tool.poetry.group.data.dependencies]
pandas = "^2.0.1"
scikit-learn = "^1.2.2"
seaborn = "^0.12.2"


[tool.poetry.group.web.dependencies]
requests = "^2.29.0"


[tool.poetry.group.backend.dependencies]
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}


[tool.poetry.group.frontend.dependencies]
streamlit = "^1.22.0"


[tool.poetry.group.config.dependencies]
python-dotenv = "^1.0.0"


[tool.poetry.group.dataops.dependencies]
schedule = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
